@@ -626,7 +626,6 @@ _setDefaultOptions (void)
 {
   options.nopeep = 0;
   options.stackAuto = 1;
-  options.mainreturn = 1;
   /* first the options part */
   options.intlong_rent = 1;
   options.float_rent = 1;
